--- a/index.html
+++ b/index.html
@@ -31,6 +31,31 @@
         </nav>
     </header>
 
+    <section class="contenedor formulario">
+        <div class="formulario__grid">
+            <div class="formulario__contenido">
+                <h2 class="formulario__heading">Encuentra y Pide comida de tú restaurante favorito</h2>
+
+                <form class="formulario__buscar" action="">
+                    <div class="formulario__campo">
+                        <label for="restaurant" class="formulario__label">Restaurante</label>
+                        <input id="restaurant" type="text" class="formulario__input" placeholder="Tacos México">
+                    </div>
+
+                    <div class="formulario__campo">
+                        <label for="platillo" class="formulario__label">Platillo</label>
+                        <input id="platillo" type="text" class="formulario__input" placeholder="Pizza, Ensalada, Hamburgesa">
+                    </div>
+
+                    <input type="submit" class="formulario__submit" value="Buscar">
+                </form>
+            </div>
+
+            <div class="formulario__imagen-contenedor">
+                <img class="formulario__imagen" src="build/img/dibujo_repartidor.svg" alt="imagen repartidor">
+            </div>
+        </div>
+    </section>
 
 
 
