--- a/index.html
+++ b/index.html
@@ -58,6 +58,29 @@
     </section>
 
 
+    <section class="pasos">
+        <img class="pasos__wave" src="build/img/wave.svg" alt="imagen wave">
+
+        <div class="pasos__contenido">
+            <h2 class="pasos__heading">¿Cómo funciona?<span class="pasos__heading--descripcion">tan fácil como 1, 2, y 3</span></h2>
+
+            <div class="pasos__grid contenedor">
+                <div class="pasos__paso">
+                    <img class="pasos__imagen" src="build/img/paso_1.png" alt="paso_1">
+                </div>
+
+                <div class="pasos__paso">
+                    <img class="pasos__imagen" src="build/img/paso_2.png" alt="paso_2">
+                </div>
+
+                <div class="pasos__paso">
+                    <img class="pasos__imagen" src="build/img/paso_3.png" alt="paso_3">
+                </div>
+            </div>
+        
+        </div>
+    </section>
+
 
 
 </body>
