--- a/index.html
+++ b/index.html
@@ -81,6 +81,97 @@
         </div>
     </section>
 
+    <section class="contenedor testimoniales">
+        <h2 class="testimoniales__heading">Testimoniales</h2>
+
+        <div class="testimoniales__grid">
+            <div class="testimonial">
+                <header class="testimonial__header">
+                    <div class="testimonial__imagen">
+                        <img class="testimonial__imagen" src="build/img/testimonial1.jpg" alt="testimonial">
+                    </div>
+
+                    <div class="testimonial__informacion">
+                        <p class="testimonial__autor">Juan Perez</p>
+                        <img class="testimonial__calificacion" src="build/img/estrellas.png" alt="estrellas">
+                    </div>
+                </header>
+
+                <blockquote class="testimonial__texto">
+                    Una excelente app, puedo seleccionar una gran cantidad de opciones y pagar en tarjeta ó efectivo según me convenga. 
+                </blockquote>
+            </div> <!-- .testimonial -->
+
+            <div class="testimonial">
+                <header class="testimonial__header">
+                    <div class="testimonial__imagen">
+                        <img class="testimonial__calificacion" src="build/img/testimonial5.jpg" alt="testimonial">
+                    </div>
+
+                    <div class="testimonial__informacion">
+                        <p class="testimonial__autor">Itzel Cruz</p>
+                        <img src="build/img/estrellas.png" alt="estrellas">
+                    </div>
+                </header>
+
+                <blockquote class="testimonial__texto">
+                    Una excelente app, puedo seleccionar una gran cantidad de opciones.
+                </blockquote>
+            </div> <!-- .testimonial -->
+
+            <div class="testimonial">
+                <header class="testimonial__header">
+                    <div class="testimonial__imagen">
+                        <img class="testimonial__calificacion" src="build/img/testimonial4.jpg" alt="testimonial">
+                    </div>
+
+                    <div class="testimonial__informacion">
+                        <p class="testimonial__autor">Rocio Rodriguez</p>
+                        <img src="build/img/estrellas.png" alt="estrellas">
+                    </div>
+                </header>
+
+                <blockquote class="testimonial__texto">
+                    Una excelente app, puedo seleccionar una gran cantidad de opciones y pagar en tarjeta ó efectivo según me convenga, Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                </blockquote>
+            </div> <!-- .testimonial -->
+
+            <div class="testimonial">
+                <header class="testimonial__header">
+                    <div class="testimonial__imagen">
+                        <img class="testimonial__calificacion" src="build/img/testimonial2.jpg" alt="testimonial">
+                    </div>
+
+                    <div class="testimonial__informacion">
+                        <p class="testimonial__autor">Cynthia V</p>
+                        <img src="build/img/estrellas.png" alt="estrellas">
+                    </div>
+                </header>
+
+                <blockquote class="testimonial__texto">
+                    Una excelente app, puedo seleccionar una gran cantidad de opciones y pagar en tarjeta ó efectivo según me convenga. 
+                </blockquote>
+            </div> <!-- .testimonial -->
+
+            <div class="testimonial">
+                <header class="testimonial__header">
+                    <div class="testimonial__imagen">
+                        <img class="testimonial__calificacion" src="build/img/testimonial3.jpg" alt="testimonial">
+                    </div>
+
+                    <div class="testimonial__informacion">
+                        <p class="testimonial__autor">José Hernández</p>
+                        <img src="build/img/estrellas.png" alt="estrellas">
+                    </div>
+                </header>
+
+                <blockquote class="testimonial__texto">
+                    Una excelente app, puedo seleccionar una gran cantidad de opciones y pagar en tarjeta ó efectivo según me convenga. 
+                </blockquote>
+            </div> <!-- .testimonial -->
+        </div> 
+    </section>
+
 
 
 </body>
