--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
 
-    <section class="contenedor formulario">
+    <section class="formulario contenedor">
         <div class="formulario__grid">
             <div class="formulario__contenido">
                 <h2 class="formulario__heading">Encuentra y Pide comida de tú restaurante favorito</h2>
@@ -81,7 +81,7 @@
         </div>
     </section>
 
-    <section class="contenedor testimoniales">
+    <section class="testimoniales contenedor">
         <h2 class="testimoniales__heading">Testimoniales</h2>
 
         <div class="testimoniales__grid">
@@ -170,6 +170,179 @@
                 </blockquote>
             </div> <!-- .testimonial -->
         </div> 
+    </section>
+
+    <main class="favoritos">
+        <h2 class="favoritos__heading">Restaurantes Favoritos</h2>
+
+        <div class="favoritos__grid contenedor">
+            <div class="favorito">
+                <div class="favorito__grid">
+                    <div class="favorito__imagen">
+                        <img src="build/img/logo_ensaladas.png" alt="logo restaurant">
+                    </div>
+
+                    <div class="favorito__contenido">
+                        <img src="build/img/estrellas.png" alt="calificacion restaurant">
+
+                        <h3 class="favorito__nombre">Green Ensaladas</h3>
+                        <p class="favorito__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ea voluptas vitae quo odit quos nihil unde rerum voluptates eveniet tempora, quas exercitationem id corporis maxime accusamus nesciunt optio voluptate!</p>
+                    </div>
+                </div>
+            </div> <!-- .favorito -->
+
+            <div class="favorito">
+                <div class="favorito__grid">
+                    <div class="favorito__imagen">
+                        <img src="build/img/logo_ensaladas.png" alt="logo restaurant">
+                    </div>
+
+                    <div class="favorito__contenido">
+                        <img src="build/img/estrellas.png" alt="calificacion restaurant">
+
+                        <h3 class="favorito__nombre">Green Ensaladas</h3>
+                        <p class="favorito__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ea voluptas vitae quo odit quos nihil unde rerum voluptates eveniet tempora, quas exercitationem id corporis maxime accusamus nesciunt optio voluptate!</p>
+                    </div>
+                </div>
+            </div> <!-- .favorito -->
+
+            <div class="favorito">
+                <div class="favorito__grid">
+                    <div class="favorito__imagen">
+                        <img src="build/img/logo_ensaladas.png" alt="logo restaurant">
+                    </div>
+
+                    <div class="favorito__contenido">
+                        <img src="build/img/estrellas.png" alt="calificacion restaurant">
+
+                        <h3 class="favorito__nombre">Green Ensaladas</h3>
+                        <p class="favorito__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ea voluptas vitae quo odit quos nihil unde rerum voluptates eveniet tempora, quas exercitationem id corporis maxime accusamus nesciunt optio voluptate!</p>
+                    </div>
+                </div>
+            </div> <!-- .favorito -->
+
+            <div class="favorito">
+                <div class="favorito__grid">
+                    <div class="favorito__imagen">
+                        <img src="build/img/logo_ensaladas.png" alt="logo restaurant">
+                    </div>
+
+                    <div class="favorito__contenido">
+                        <img src="build/img/estrellas.png" alt="calificacion restaurant">
+
+                        <h3 class="favorito__nombre">Green Ensaladas</h3>
+                        <p class="favorito__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ea voluptas vitae quo odit quos nihil unde rerum voluptates eveniet tempora, quas exercitationem id corporis maxime accusamus nesciunt optio voluptate!</p>
+                    </div>
+                </div>
+            </div> <!-- .favorito -->
+
+            <div class="favorito">
+                <div class="favorito__grid">
+                    <div class="favorito__imagen">
+                        <img src="build/img/logo_ensaladas.png" alt="logo restaurant">
+                    </div>
+
+                    <div class="favorito__contenido">
+                        <img src="build/img/estrellas.png" alt="calificacion restaurant">
+
+                        <h3 class="favorito__nombre">Green Ensaladas</h3>
+                        <p class="favorito__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ea voluptas vitae quo odit quos nihil unde rerum voluptates eveniet tempora, quas exercitationem id corporis maxime accusamus nesciunt optio voluptate!</p>
+                    </div>
+                </div>
+            </div> <!-- .favorito -->
+
+            <div class="favorito">
+                <div class="favorito__grid">
+                    <div class="favorito__imagen">
+                        <img src="build/img/logo_ensaladas.png" alt="logo restaurant">
+                    </div>
+
+                    <div class="favorito__contenido">
+                        <img src="build/img/estrellas.png" alt="calificacion restaurant">
+
+                        <h3 class="favorito__nombre">Green Ensaladas</h3>
+                        <p class="favorito__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ea voluptas vitae quo odit quos nihil unde rerum voluptates eveniet tempora, quas exercitationem id corporis maxime accusamus nesciunt optio voluptate!</p>
+                    </div>
+                </div>
+            </div> <!-- .favorito -->
+
+            <div class="favorito">
+                <div class="favorito__grid">
+                    <div class="favorito__imagen">
+                        <img src="build/img/logo_ensaladas.png" alt="logo restaurant">
+                    </div>
+
+                    <div class="favorito__contenido">
+                        <img src="build/img/estrellas.png" alt="calificacion restaurant">
+
+                        <h3 class="favorito__nombre">Green Ensaladas</h3>
+                        <p class="favorito__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ea voluptas vitae quo odit quos nihil unde rerum voluptates eveniet tempora, quas exercitationem id corporis maxime accusamus nesciunt optio voluptate!</p>
+                    </div>
+                </div>
+            </div> <!-- .favorito -->
+
+            <div class="favorito">
+                <div class="favorito__grid">
+                    <div class="favorito__imagen">
+                        <img src="build/img/logo_ensaladas.png" alt="logo restaurant">
+                    </div>
+
+                    <div class="favorito__contenido">
+                        <img src="build/img/estrellas.png" alt="calificacion restaurant">
+
+                        <h3 class="favorito__nombre">Green Ensaladas</h3>
+                        <p class="favorito__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ea voluptas vitae quo odit quos nihil unde rerum voluptates eveniet tempora, quas exercitationem id corporis maxime accusamus nesciunt optio voluptate!</p>
+                    </div>
+                </div>
+            </div> <!-- .favorito -->
+
+            <div class="favorito">
+                <div class="favorito__grid">
+                    <div class="favorito__imagen">
+                        <img src="build/img/logo_ensaladas.png" alt="logo restaurant">
+                    </div>
+
+                    <div class="favorito__contenido">
+                        <img src="build/img/estrellas.png" alt="calificacion restaurant">
+
+                        <h3 class="favorito__nombre">Green Ensaladas</h3>
+                        <p class="favorito__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ea voluptas vitae quo odit quos nihil unde rerum voluptates eveniet tempora, quas exercitationem id corporis maxime accusamus nesciunt optio voluptate!</p>
+                    </div>
+                </div>
+            </div> <!-- .favorito -->
+
+            <div class="favorito">
+                <div class="favorito__grid">
+                    <div class="favorito__imagen">
+                        <img src="build/img/logo_ensaladas.png" alt="logo restaurant">
+                    </div>
+
+                    <div class="favorito__contenido">
+                        <img src="build/img/estrellas.png" alt="calificacion restaurant">
+
+                        <h3 class="favorito__nombre">Green Ensaladas</h3>
+                        <p class="favorito__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ea voluptas vitae quo odit quos nihil unde rerum voluptates eveniet tempora, quas exercitationem id corporis maxime accusamus nesciunt optio voluptate!</p>
+                    </div>
+                </div>
+            </div> <!-- .favorito -->
+        </div>
+    </main>
+
+    <section class="repartidores">
+        <h2 class="repartidores__heading">Gana dinero con AppComida</h2>
+
+        <div class="repartidores__grid contenedor">
+            <div class="repartidores__imagen">
+                <img src="build/img/repartidor.jpg" alt="imagen repartidor">
+            </div>
+
+            <div class="repartidores__contenido">
+                <p class="repartidores__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil consequatur nostrum in nam dicta labore a?</pclass>
+                <p class="repartidores__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat doloremque earum amet officia similique. </p>
+
+                <a class="repartidores__enlace" href="#">Más información</a>
+            </div>
+        </div>
     </section>
 
 
