terminando seccion repartidores, iniciando seccion descargar

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             </div>
 
             <div class="repartidores__contenido">
-                <p class="repartidores__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil consequatur nostrum in nam dicta labore a?</pclass>
+                <p class="repartidores__texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum magnam sunt alias. Enim odit est distinctio doloribus soluta voluptatem, quod repellat libero! Obcaecati eligendi eum nesciunt non? Quod, blanditiis nemo.</pclass>
                 <p class="repartidores__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat doloremque earum amet officia similique. </p>
 
                 <a class="repartidores__enlace" href="#">Más información</a>
