--- a/index.html
+++ b/index.html
@@ -368,6 +368,39 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <div class="footer__grid contenedor">
+            <div class="footer__widget">
+                <h3 class="footer__heading">Nosotros</h3>
+                <p class="footer__texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil natus excepturi qui architecto debitis? Mollitia molestiae, totam tenetur minima quisquam facilis quas architecto, ex minus labore suscipit id deserunt consequatur?</p>
+            </div>
+
+            <div class="footer__widget">
+                <h3 class="footer__heading">Navegación</h3>
+                <nav class="footer__nav">
+                    <a href="#" class="footer__link">Enlace 1</a>
+                    <a href="#" class="footer__link">Enlace 2</a>
+                    <a href="#" class="footer__link">Enlace 3</a>
+                    <a href="#" class="footer__link">Enlace 4</a>
+                    <a href="#" class="footer__link">Enlace 5</a>
+                    <a href="#" class="footer__link">Enlace 6</a>
+                </nav>
+            </div>
+
+            <div class="footer__widget">
+                <h3 class="footer__heading">Contacto</h3>
+                <p class="footer__texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil natus excepturi qui architecto debitis? Mollitia molestiae, totam tenetur minima quisquam facilis quas architecto, ex minus labore suscipit id deserunt consequatur?</p>
+            </div>
+        </div>
+
+        <p class="footer__copyright">
+            App Comida. Todos los derechos reservados
+        </p>
+        
+
+        
+    </footer>
+
 
 </body>
 </html>
